ahora es personal

--- a/src/app/components/form-book/form-book.component.html
+++ b/src/app/components/form-book/form-book.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <div class="left">
-        <button class="btn btn-primary" id="button-header" type="button" routerLink="/home"> <img src="../../../assets/iconos/back-svgrepo-com.svg" class="icon-back"> Pagina Anterior</button>
+        <button class="btn btn-primary" id="button-header" type="button" routerLink="/gestionarbooks"> <img src="../../../assets/iconos/back-svgrepo-com.svg" class="icon-back"> Pagina Anterior</button>
         <div class="left-center">
             <h5>Añadir nuevo libro</h5>
             <img src="../../../assets/iconos/niño_pensando_-removebg-preview.png" style="width: 70%;">
