--- a/src/app/components/gestionarbooks/gestionarbooks.component.html
+++ b/src/app/components/gestionarbooks/gestionarbooks.component.html
@@ -1,6 +1,6 @@
 <div class="container my-5">
     <div class="d-flex justify-content-between align-items-center mb-3">
-      <h2>Libros</h2>
+      <h2 type="button" routerLink="/home">Libros</h2>
       <button class="btn btn-dark " routerLink="/form-book">
         <svg class="mr-2" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 5V19M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
