--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,7 +21,7 @@
         <input type="text" class="form-control" placeholder="Usuario" aria-label="Username" aria-describedby="basic-addon1" formControlName="username">
       </div>
       <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Contraseña" aria-label="Contraseña" aria-describedby="basic-addon1" formControlName="password">
+        <input type="password" class="form-control" placeholder="Contraseña" aria-label="Contraseña" aria-describedby="basic-addon1" formControlName="password">
       </div>
       <div class="input-group mb-3">
         <input type="text" class="form-control" placeholder="Correo" aria-label="Correo" aria-describedby="basic-addon1" formControlName="email">
@@ -74,7 +74,7 @@
 <input type="text" class="form-control" placeholder="Usuario" aria-label="Username" aria-describedby="basic-addon1" formControlName="username">
 </div>
 <div class="input-group mb-3">
-<input type="text" class="form-control" placeholder="Contraseña" aria-label="Contraseña" aria-describedby="basic-addon1" formControlName="password">
+<input type="password" class="form-control" placeholder="Contraseña" aria-label="Contraseña" aria-describedby="basic-addon1" formControlName="password">
 </div>
 
 <div class=" mb-3 buton-center" >
