--- a/src/app/components/form-book/form-book.component.css
+++ b/src/app/components/form-book/form-book.component.css
@@ -131,4 +131,9 @@ max-height: 392px;
   .form-check.form-switch .form-check-input:hover{
     box-shadow: 0 0 5px 2px rgba(0, 128, 0, 0.5); 
   }
- 
+ h5{
+    font-size: large;
+ }
+ ng-select{
+    width: 60%;
+ }
