espermeos que sea el ultimo update

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
-
+<app-nav-var></app-nav-var>
 <div class="content">
-    <h6>Ediciones Matanzas</h6>
+    <h4>Ediciones Matanzas</h4>
     <div class="left">
         <div class="tilte">
             <h2>Sobre nosotros</h2>
