--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 <app-nav-var></app-nav-var>
 <div class="cartel-body">
    <div class="leterero">
-      <h1>Editorial Matanzas</h1>
+      <h1>Ediciones Matanzas</h1>
    </div>
 </div>
 <div class="libros-list" *ngIf="books.length > 0">
