--- a/src/app/components/nav-var/nav-var.component.html
+++ b/src/app/components/nav-var/nav-var.component.html
@@ -36,7 +36,7 @@
           <button type="button" class="btn btn-primary bton-letrero" (click)="logincheck()">Mi Biblioteca</button>
        </div>
        <div class="right">
-          <button type="button" class="btn btn-primary bton-letrero">Contactanos</button>
+          <button type="button" class="btn btn-primary bton-letrero" routerLink="/contactanos">Contactanos</button>
           <button type="button" class="btn btn-primary bton-letrero" routerLink="/about">Sobre Nosotros</button>
        </div>
       
