--- a/src/app/components/noticia-form/noticia-form.component.html
+++ b/src/app/components/noticia-form/noticia-form.component.html
@@ -2,7 +2,7 @@
     <div class="left">
         <button class="btn btn-primary" id="button-header" type="button" routerLink="/gestionarbooks"> <img src="../../../assets/iconos/back-svgrepo-com.svg" class="icon-back"> Pagina Anterior</button>
         <div class="left-center">
-            <h5>Añadir nuevo libro</h5>
+            <h5>Añadir nueva noticia</h5>
             <img src="../../../assets/iconos/niño_pensando_-removebg-preview.png" style="width: 70%;">
            
         </div>
@@ -14,9 +14,9 @@
                 <h4>Notician</h4><br><br>
                 <h5 >Insertar titulo </h5>
                 <input type="text" class="form-control input_text" id="formGroupExampleInput" placeholder="Introduce el titulo de la noticia" formControlName="titulo"><br>
-                <h5 >Insertar descripciòn del libro</h5>
+                <h5 >Insertar descripciòn</h5>
                 <textarea class="form-control" aria-label="With textarea" formControlName="texto"></textarea>
-                <h5 >Insertar Imagen de la noticia </h5>
+                <h5 >Insertar Imagen </h5>
                 <input type="file" class="form-control input_text" id="inputGroupFile02" formControlName="imagen" (change)="onFileSelectedimg($event)">
                 </div>
                 <br>
