--- a/src/app/components/biblioteca/biblioteca.component.css
+++ b/src/app/components/biblioteca/biblioteca.component.css
@@ -352,3 +352,18 @@ h1{
     width:2rem;
     margin-bottom: 0.6em;
 }
+.filtrar-menu{
+   padding: 0% 5%;
+   margin-top: 1vh;
+    align-items: center;
+    height: 10vh;
+    display: grid;
+    grid-template-columns: 70% 30%;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.input-check{
+ 
+    justify-self: end;
+}
