--- a/src/app/components/biblioteca/biblioteca.component.html
+++ b/src/app/components/biblioteca/biblioteca.component.html
@@ -1,13 +1,28 @@
 <app-nav-var></app-nav-var>
 
-<div class="libros-list" *ngIf="books.length > 0">
-    <div class="card" *ngFor="let book of filteredOptions" (click)="onBookClick(book.slug)">
-       <img [src]="book.image_url" alt="">
-       <div class="card-body">
-          <Label class="card-tittle"> {{book.price}}$</Label>
+
+    <div class="filtrar-menu" >
+      <div class="slelect">
+       <select class="form-select" (change)="onAuthorFilter($event)">
+        <option value="">Filtrar por autor</option>
+        <option *ngFor="let autor of filteredOptionsautor" [value]="autor.nombre">{{ autor.nombre}}</option>
+      </select>
+      </div>
+      <div class="input-check">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" [checked]="freeOnly" (change)="onFreeFilter()">
+          <label class="form-check-label">Mostrar solo gratis</label>
+        </div>
+      </div>
+    </div>
+  
+    <div class="libros-list" *ngIf="filteredOptions.length > 0">
+      <div class="card" *ngFor="let book of filteredOptions" (click)="onBookClick(book.slug)">
+        <img [src]="book.image_url" alt="">
+        <div class="card-body">
+          <label class="card-title">{{ book.price }}$</label>
           <div class="hr"></div>
           <button type="button" class="btn btn-primary">Sobre...</button>
+        </div>
       </div>
-  </div>
- 
-</div>
+    </div>
