--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -333,6 +333,7 @@ h1{
     color:#0D92CC;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-right: 100px;
+    font-size: xx-large;
 }
 
 .bton-letrero{
